Bug 495798.  Drop native theming for controls styled with transparent backgrounds, even if the user said to not use the page colors.  r+sr=dbaron