layout/base/nsPresContext.cpp
@@ -1610,9 +1610,9 @@ nsPresContext::IsChrome() const
 nsPresContext::HasAuthorSpecifiedRules(nsIFrame *aFrame, PRUint32 ruleTypeMask) const
 {
   return
-    UseDocumentColors() &&
     nsRuleNode::HasAuthorSpecifiedRules(aFrame->GetStyleContext(),
-                                        ruleTypeMask);
+                                        ruleTypeMask,
+                                        UseDocumentColors());
 }
 
 static void
