layout/style/nsCSSValue.h
@@ -249,6 +249,8 @@ public:
     return mValue.mColor;
   }
 
+  PRBool IsNonTransparentColor() const;
+
   Array* GetArrayValue() const
   {
     NS_ASSERTION(eCSSUnit_Array <= mUnit && mUnit <= eCSSUnit_Function,
